# ai-dev-team

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
core/: adapter.py  agent_bus.py  agent_bus_models.py  agent_bus_projection.py  agent_bus_projection_throttle.py  agent_collaboration.py  agent_dm_context.py  agent_dm_disambiguation.py  agent_dm_models.py  agent_dm_reply.py  agent_owner_notifications.py  agent_personas.py  agent_role_catalog.py  agents.py  background_runner.py  bot_commands.py  bot_identity_lifecycle.py  bot_runner.py  call_graph.py  code_retriever.py  confirmation_gate.py  contracts.py  coordinator_onboarding.py  coordinator_owner_escalation.py  coordinator_role.py  coordinator_team_assembly.py  coordinator_team_proposal.py  dependency_graph.py  dispatcher_agents.py  env_layout.py  fsm.py  git_integration.py  healthcheck_model.py  hire_approval.py  impact_analysis.py  json_extractor.py  llm_dispatcher.py  logical_hiring.py  memory.py  model_tier.py  (+42 more)
docs/: DEPLOY_NEW_ARCHITECTURE.md  HOSTING_PROVIDER_DECISION.md  LOCAL_DATA_AGENT_LIVE_IDENTITY.md  LOCAL_DEVOPS_AGENT_LIVE_IDENTITY.md  LOCAL_DIRECT_DM_ROLE_VOICE.md  LOCAL_ISOLATED_PILOT_RUNBOOK.md  LOCAL_ISOLATED_PILOT_STATUS.md  LOCAL_LIVE_DIAGNOSTICS_DETAIL_CERTIFICATION.md  LOCAL_LIVE_ROSTER_EXPANSION.md  LOCAL_LIVE_TELEGRAM_CONTOUR.md  LOCAL_MULTI_AGENT_TELEGRAM_LOOP.md  LOCAL_PILOT_TASK_EXECUTION.md  LOCAL_SECURITY_AGENT_LIVE_IDENTITY.md  LOCAL_SUCCESSFUL_TELEGRAM_TASK_LOOP.md  LOCAL_TEAM_AGENT_CERTIFICATION.md  LOCAL_TELEGRAM_QUALITY_BARRIER_DIAGNOSTICS.md  LOCAL_WEB_OFFICE_CERTIFICATION.md  PUBLISH_TO_GITHUB.md  ROADMAP_TO_PRODUCTION.md  VPS_BASELINE_BOOTSTRAP.md  fsm_spec.md
reports/: step-14b-9-report.md
scripts/: quality_check.sh  (+2 more)
(+137 files in other folders)
